# rust-auth

./: .env  Cargo.toml
src/: auth.rs  db.rs  main.rs
src/models/: mod.rs  models.rs
src/schema/: mod.rs
src/schema/mutations/: cms.rs  mod.rs  users.rs
src/schema/queries/: cms.rs  mod.rs  users.rs
