[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
actix-web-lab = "*"
async-graphql = "7.0.15"
async-graphql-actix-web = "7.0.15"
bcrypt = "0.15"
chrono = {version = "0.4.40", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "8"
mongodb = "2.8"
futures = "0.3"  # Add this line if it's missing
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
